--- a/_posts/2014-04-16-week-1.md
+++ b/_posts/2014-04-16-week-1.md
@@ -6,8 +6,6 @@ tags: [inspiration]
 
 # HELLO MONDAY - MAGRITTE
 
-Hello [Internet](http://google.com)
+An amazing online exhibit created by Hello Monday. I love the custom, trippy transitions, the great use of avant-garde music, and the experiential quality of the whole site. It is very inventive and engaging, it brought me into a world of an artist I had never heard of and kept me there for a while. I have no idea how it was built but this project is especially what cemented my interest in the firm Hello Monday.
 
-This is my cat:
-
-![My Cat](http://placekitten.com/300/300)
+![Magritte](http://wpc.7ce6.edgecastcdn.net/807CE6/hellomonday_com/assets/images/case-studies/magritte/header/artwork.jpg?1111233/300/300)
