--- a/_posts/2014-02-18-week-4.md
+++ b/_posts/2014-02-18-week-4.md
@@ -9,4 +9,4 @@ tags: [inspiration]
 I have always really loved this [wind visualization project](http://hint.fm/wind/). From a web design standpoint its quite simple in terms of its page layout. However, the actual visualization itself is amazingly beautiful. To be able to see all of the wind patterns for the entire nation in one animated image gets me every time. Not only is it beautiful but it is also easily understood and serves an informational purpose. Great web project!
 
 
-![wind](http://www.wired.com/geekdad/wp-content/uploads/2012/04/Google_Wind_640px.png/300/300)
+![wind](assets/images/wind.png/300/300)
