--- a/_posts/2014-02-25-week-5.md
+++ b/_posts/2014-02-25-week-5.md
@@ -8,4 +8,6 @@ tags: [inspiration]
 
 # PITCHFORK ADVANCE 
 
-I am a huge fan of this web project. It has a wonderful, minimalistic interface which highlights the album artwork and even allows for videos to be played with the songs. The scroll bars on the sides add another dimensionality to the experience, emulating flipping through album artwork. This interface is not simply just another way to consume music but it is an experience.
+I am a huge fan of this [site](http://24hoursofhappy.com/). It has a wonderful, minimalistic interface which highlights the album artwork and even allows for videos to be played with the songs. The scroll bars on the sides add another dimensionality to the experience, emulating flipping through album artwork. This interface is not simply just another way to consume music but it is an experience.
+
+![pitchfork](http://cdn3.sbnation.com/entry_photo_images/7466157/advance_large_verge_medium_landscape.jpg?1111233/300/300)
